# DeepMicroPath-frontend

./: .env.deepmicropath  .env.template  API_TEST_RESULTS.md  CLEAR_CACHE.md  DEEPMICROPATH_INTEGRATION.md  DESIGN_SYSTEM.md  EVIDENCESEEK.md  FINAL_FIX.md  FIX_NO_MODELS.md  MODEL_CLEANUP_SUMMARY.md  MODES.md  MODE_UPDATE_SUMMARY.md  QUICK_FIX.js  README.DeepMicroPath.md  README.md  SYNC_FIX_QUICK_REF.md  SYNC_MODE_COMPLETE_FIX.md  SYNC_MODE_FIX.md  next.config.mjs  package.json  push_to_github.sh  test-api-readiness.js
app/: constant.ts  layout.tsx  utils.ts
app/api/: auth.ts  deepmicropath.ts
app/api/[provider]/[...path]/: route.ts
app/api/config/: route.ts
app/api/deepmicropath/[...path]/: route.ts
app/client/: api.ts
app/components/: auth.tsx  chat.module.scss  chat.tsx  evidenceseek-logo.module.scss  evidenceseek-logo.tsx  home.tsx  markdown.tsx  mask.tsx  model-config.tsx  settings.tsx  sidebar.tsx
app/components/realtime-chat/: realtime-chat.tsx  realtime-config.tsx
app/config/: server.ts
app/hooks/: useDeepMicroPathWS.ts
app/locales/: cn.ts  en.ts
app/masks/: evidenceseek-cn.ts  index.ts
app/mcp/: actions.client.ts
app/store/: access.ts  chat.ts  config.ts  plugin.ts  sd.ts  update.ts
app/styles/: globals.scss  markdown.scss
app/tracing/: page.tsx
app/utils/: chat.ts  hooks.ts  sync.ts
public/: site.webmanifest
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
